log
ju., 21 de abr. de 2022 11:28:34: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:76:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than (key,aux->pair->key)==1){
            ^~~~~~~~~~
treemap.c:78:18: error: implicit declaration of function 'lowe_than' [-Werror=implicit-function-declaration]
         }else if(lowe_than(aux->pair->key,key)==1){
                  ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
27a38ef
ju., 21 de abr. de 2022 11:28:51: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:76:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than (key,aux->pair->key)==1){
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7dd821d
ju., 21 de abr. de 2022 11:30:08: 
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:76:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than(key,aux->pair->key)==1){
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c2a528f
ju., 21 de abr. de 2022 11:32:03: 
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:76:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than(key,aux->pair->key)==1){
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dd68126
ju., 21 de abr. de 2022 11:35:12: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  8|7
total_score: 10/70
7d6f757
ju., 21 de abr. de 2022 11:43:59: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
072fa8c
ju., 21 de abr. de 2022 11:44:57: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
b6d070e
ju., 21 de abr. de 2022 11:54:57: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:50:14: error: unused variable 'aux' [-Werror=unused-variable]
     TreeNode*aux=tree->root;
              ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
c333a82
ju., 21 de abr. de 2022 11:55:13: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
039f70d
ju., 21 de abr. de 2022 11:56:32: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:51:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     tree->root=searchTreeMap(tree,key);
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
73ae5d1
ju., 21 de abr. de 2022 11:56:54: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:51:21: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     tree->root->left=searchTreeMap(tree,key);
                     ^
cc1.exe: all warnings being treated as errors
Compilation failed
3060f40
ju., 21 de abr. de 2022 12:02:53: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:55:22: error: 'return' with a value, in function returning void [-Werror]
         }else return NULL;
                      ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
caeb617
ju., 21 de abr. de 2022 12:04:34: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:55:20: error: 'return' with a value, in function returning void [-Werror]
             return tree;
                    ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
86eabe6
ju., 21 de abr. de 2022 12:05:51: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:50:14: error: unused variable 'aux' [-Werror=unused-variable]
     TreeNode*aux=tree->root;
              ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
d8672eb
ju., 21 de abr. de 2022 12:06:10: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
d24d924
ju., 21 de abr. de 2022 14:11:47: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  11|6
total_score: 15/70
32ef3f2
ju., 21 de abr. de 2022 14:12:51: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
229625e
ju., 21 de abr. de 2022 14:14:03: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 15/70
843e440
ju., 21 de abr. de 2022 14:17:31: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:104:29: error: passing argument 1 of 'minimum' from incompatible pointer type [-Werror=incompatible-pointer-types]
     TreeNode* first=minimum(tree);
                             ^~~~
treemap.c:54:12: note: expected 'TreeNode * {aka struct TreeNode *}' but argument is of type 'TreeMap * {aka struct TreeMap *}'
 TreeNode * minimum(TreeNode * x){
            ^~~~~~~
treemap.c:105:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return first;
            ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4e08173
ju., 21 de abr. de 2022 14:18:39: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:106:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return first;
            ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
edd337b
ju., 21 de abr. de 2022 14:19:02: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:106:16: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree->current;
            ~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1ff9645
ju., 21 de abr. de 2022 14:19:17: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
b20f44f
ju., 21 de abr. de 2022 14:20:44: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 20/70
ea831dd
ju., 21 de abr. de 2022 14:23:16: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
327231b
ju., 21 de abr. de 2022 14:24:45: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 20/70
20a18df
ju., 21 de abr. de 2022 14:25:22: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 25/70
bda75fd
ju., 21 de abr. de 2022 14:26:33: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:122:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
57b58c0
ju., 21 de abr. de 2022 14:26:53: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 25/70
555ee20
ju., 21 de abr. de 2022 16:41:37: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  17|4
total_score: 25/70
b37d14b
ju., 21 de abr. de 2022 16:43:05: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 25/70
41a8872
ju., 21 de abr. de 2022 21:09:34: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  17|4
total_score: 25/70
8acc053
